<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/login_bg">

        <ImageView
            android:id="@+id/loginLog"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/login_logo" />

        <TextView
            android:id="@+id/loginTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginLog"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/login_slogan_text"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:id="@+id/linearUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTv"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/login_username" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/login_username_placeholder"
                android:lines="1"
                android:paddingRight="45dp"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:id="@+id/linearUsernameBelowLine"
            style="@style/LoginActivityLineView"
            android:layout_below="@+id/linearUsername" />

        <LinearLayout
            android:id="@+id/linearPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearUsernameBelowLine"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/login_password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/login_password_placeholder"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingRight="45dp"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:id="@+id/linearPasswordBelowLine"
            style="@style/LoginActivityLineView"
            android:layout_below="@+id/linearPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearPasswordBelowLine"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_style"
            android:text="@string/login_submit"
            android:textColor="#FFFFFF"
            android:textSize="20dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/versionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="#c0c0c0"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:id="@+id/forgetPasswordTv"
            android:text="@string/forgetPassword"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>
</RelativeLayout>